# Iot_Fault_Detection_Env

./: README.md  app.py  baseline.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_config.json  validate-submission.sh
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py  normal.py
